fixed mustache index

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,7 +2,7 @@
 
 <div class="row center-align">
     <h3>Vote your favourite movie</h3>
-    <h4>We have {{movieCount}} movies with a total of {{voteCount}} in our database!</h4>
+    <h4>We have {{movieCount}} movies with a total of {{voteCount}} votes in our database!</h4>
 </div>
 <div class="row">
     <div class="col s6">
