--- a/src/main/resources/templates/movie.mustache
+++ b/src/main/resources/templates/movie.mustache
@@ -1,3 +1,31 @@
 {{>header}}
-<h2>TODO: Show movie details</h2>
+<h2>Dettagli del film</h2>
+<div class="row center-align">
+    <h3>{{movie.title}}</h3>
+</div>
+<div class="row">
+    <div class="col s12">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{movie.title}}</span>
+                <h6>{{movie.director}}</h6>
+                <p>Genere: {{movie.genre}}</p>
+                <p>Anno di uscita: {{movie.year}}</p>
+                <p>Paese di produzione: {{movie.country}}</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col s12">
+        <h4>Attori:</h4>
+        {{#actor}}
+            <div class="card">
+                <div class="card-content">
+                    <p class="card-title">{{name}}</p>
+                </div>
+            </div>
+        {{/actor}}
+    </div>
+</div>
 {{>footer}}
